docs/style.css
body {

    /*background:papayaWhip*/
    background: Cornsilk;
    font-family: Papyrus, Comic-sans, Arial, Helvetica, sans-serif, Wingdings, Webdings;
}

section.main   {
padding:2em;

}

div.side-by-side {
    display: flex;
}

img {
    width: 59%;
    max-width: 500px;
}

.featureBlock {
    background-color:AntiqueWhite;
    font-size: smaller;
    width: 13%;
/*    margin: auto;*/
padding-left: 2em;
}

/*p {
  border: 2px solid red;
  border-radius: 5px;
}*/

div.inline{
display:inline;
}

.majorBlock {
    background-color:AliceBlue;
    width: 30%;
/*    margin: auto;*/
padding-left: 3em;
}


div.threeD{
    width:80%;
    background:lightpink;
}
div.threeD iframe{
    width:100%;
    height:100%;
    max-height:1280px;
    max-width:1280px;
}

